# workstation-setup

./: .gitignore  LICENSE  README.md  install-python.sh  notes.txt  pyproject.toml  pytest.ini  rchapin-wsconfigs.yaml  requirements.txt  requirements_test-dev.txt  run-tests.sh  setup.cfg  setup.sh  ws_env_vars.sh
bootstrap/: bootstrap-debian_11.sh  bootstrap-xfce4_debian_11.sh  bootstrap-xfce4_debian_12.sh
configs/: common.yaml  debian_11.yaml  redshift.conf  redshift.service
pydeploy/: certs.py  configs.py  developer_tools.py  docker.py  enums.py  gcp.py  git.py  java.py  kubernetes.py  os.py  program.py  signed_packages.py  slack.py  tasks.py  utils.py  virtualbox.py  zoom.py
pydeploy/distributions/: debian.py  distribution.py
pydeploy/tests/: test_utils.py  test_virtualbox.py
pydeploy/tests/resources/: api-github-com-response.json  get-line-from-file-test-data.txt
resources/: sample-cfg.yaml
tasks/: __init__.py  tasks.py
workstationsetup/: debian_libs.py  enums.py  main.py  utils.py  workstationsetup_tasks.py  wsconfig.py
workstationsetup/distributions/: debian.py  distribution.py
workstationsetup/integration_tests/: int_test_utils.py  it_base.py  test_base.py  test_debian.py  test_debian_11.py  test_debian_12.py
workstationsetup/integration_tests/docker/debian_11/: Dockerfile
workstationsetup/integration_tests/vagrant/xfce4-debian_11/: Vagrantfile
workstationsetup/integration_tests/vagrant/xfce4_debian_11/: provision.sh  xfce4_debian_11.pkr.hcl
workstationsetup/tests/: test_configs.py  test_enums.py  test_utils.py
(+4 files in other folders)
