[metadata]
name = workstationsetup
version = 0.3.0
author = "Ryan Chapin"
author_email = "rchapin@nbinteractive.com"
description = "Workstation Setup Tool"
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Programming Language :: Python :: 3.10"

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
test = file: requirements_test-dev.txt
dev = file: requirements_test-dev.txt

[options.package_data]
* = README.md, requirements.txt

[options.packages.find]
exclude =
    tests, integration_tests

[options.entry_points]
console_scripts =
    workstationsetup = workstationsetup.main:program.run
